--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
             - database
         environment:
             - DATABASE_URL=postgresql://myuser:mypassword@database:5432/databasename
-            - RECOGNITION_MODEL_URL=https://bba1vua4lf4q7qih259e.containers.yandexcloud.net/predict
+            - RECOGNITION_MODEL_URL=http://localhost:8080/predict
 
     # Frontend service
     frontend:
